Fixes to dark mode switch and other small changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-	height: calc(100% - 363px);
+	min-height: calc(100% - 363px);
 }
 
 h1,
